--- a/sample-instances/equipment-collection.html
+++ b/sample-instances/equipment-collection.html
@@ -35,7 +35,7 @@
 <h2>Add New Equipment</h2>
 <form class="edit_equipment" method="post">
     <label>Item Name: <input name="name" type="text" required></label><br>
-    <label>Barcode: <input name="name" type="number" required></label><br>
+    <label>Barcode: <input name="barcode" type="number" required></label><br>
     <label>Replacement Cost: <input name="cost" type="number" step="0.01" min="0"></label><br>
     <label>Description:<br><textarea name="description"></textarea></label><br>
     <input type="submit" value="Add Item">
